# glance

./: CLAUDE.md  Cargo.toml  GEMINI_PLAN.md  GEMINI_TODO.md  OPENAI.md  OPENAI_PLAN.md  README.md  TODOs.md
docs/plans/: 2026-03-09-tui-overhaul-design.md  2026-03-09-tui-overhaul-plan.md
src/: app.rs  browser.rs  config.rs  digest.rs  icons.rs  layout.rs  lib.rs  location.rs  main.rs  news.rs  system.rs  theme.rs  ui.rs  weather.rs
src/utils/: cache.rs  helpers.rs  mod.rs
