[package]
name = "glance"
version = "0.1.0"
edition = "2021"
authors = ["Glance Team"]
description = "A terminal-based system monitor TUI dashboard"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.32"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rss = "2.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "5.0"
anyhow = "1"
thiserror = "1"
unicode-width = "0.2"
parking_lot = "0.12"
